# opencad-pyshell-plugin

./: Cargo.toml  IMPLEMENTATION_STATUS.md  README.md  plugin.toml
.cargo/: config.toml
.github/workflows/: release.yml
src/: lib.rs
